k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: website
